[package]
name = "nhl_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.6.1", features = ["derive"] }
